; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdiplus/extr_graphicspath.c_test_lastpoint.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdiplus/extr_graphicspath.c_test_lastpoint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { double, double }

@FillModeAlternate = common dso_local global i32 0, align 4
@Ok = common dso_local global i32 0, align 4
@InvalidParameter = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_lastpoint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_lastpoint() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_3__, align 8
  %4 = load i32, i32* @FillModeAlternate, align 4
  %5 = call i32 @GdipCreatePath(i32 %4, i32** %2)
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @GdipAddPathRectangle(i32* %6, double 5.000000e+00, double 5.000000e+00, double 1.000000e+02, double 5.000000e+01)
  store i32 %7, i32* %1, align 4
  %8 = load i32, i32* @Ok, align 4
  %9 = load i32, i32* %1, align 4
  %10 = call i32 @expect(i32 %8, i32 %9)
  %11 = call i32 @GdipGetPathLastPoint(i32* null, %struct.TYPE_3__* %3)
  store i32 %11, i32* %1, align 4
  %12 = load i32, i32* @InvalidParameter, align 4
  %13 = load i32, i32* %1, align 4
  %14 = call i32 @expect(i32 %12, i32 %13)
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @GdipGetPathLastPoint(i32* %15, %struct.TYPE_3__* null)
  store i32 %16, i32* %1, align 4
  %17 = load i32, i32* @InvalidParameter, align 4
  %18 = load i32, i32* %1, align 4
  %19 = call i32 @expect(i32 %17, i32 %18)
  %20 = call i32 @GdipGetPathLastPoint(i32* null, %struct.TYPE_3__* null)
  store i32 %20, i32* %1, align 4
  %21 = load i32, i32* @InvalidParameter, align 4
  %22 = load i32, i32* %1, align 4
  %23 = call i32 @expect(i32 %21, i32 %22)
  %24 = load i32*, i32** %2, align 8
  %25 = call i32 @GdipGetPathLastPoint(i32* %24, %struct.TYPE_3__* %3)
  store i32 %25, i32* %1, align 4
  %26 = load i32, i32* @Ok, align 4
  %27 = load i32, i32* %1, align 4
  %28 = call i32 @expect(i32 %26, i32 %27)
  %29 = load i32, i32* @TRUE, align 4
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %31 = load double, double* %30, align 8
  %32 = fcmp oeq double %31, 5.000000e+00
  br i1 %32, label %33, label %37

33:                                               ; preds = %0
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 1
  %35 = load double, double* %34, align 8
  %36 = fcmp oeq double %35, 5.500000e+01
  br label %37

37:                                               ; preds = %33, %0
  %38 = phi i1 [ false, %0 ], [ %36, %33 ]
  %39 = zext i1 %38 to i32
  %40 = call i32 @expect(i32 %29, i32 %39)
  %41 = load i32*, i32** %2, align 8
  %42 = call i32 @GdipDeletePath(i32* %41)
  ret void
}

declare dso_local i32 @GdipCreatePath(i32, i32**) #1

declare dso_local i32 @GdipAddPathRectangle(i32*, double, double, double, double) #1

declare dso_local i32 @expect(i32, i32) #1

declare dso_local i32 @GdipGetPathLastPoint(i32*, %struct.TYPE_3__*) #1

declare dso_local i32 @GdipDeletePath(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
